--- a/CSS/header.css
+++ b/CSS/header.css
@@ -8,8 +8,8 @@ header {
     padding: 16px 0;
     transition: 500ms;
     z-index: 1;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-bottom: solid 2px #94652B;
+    background-color: black;
+   /* border-bottom: solid 2px #94652B;*/
 }
 
 .navigation {
