--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #191919;
+}
+
 html {
     scroll-behavior: smooth;
     overflow-x: hidden;
