--- a/CSS/mediaQueries.css
+++ b/CSS/mediaQueries.css
@@ -15,6 +15,24 @@
 	}
 }
 
+@media screen and (max-width: 913px) {
+
+	/* -------------------- Section 1 About Limovia -------------------- */
+	.aboutLimoviaInfo img {
+		width: 700px !important;
+		height: auto;
+	}
+}
+
+@media screen and (max-width: 821px) {
+
+	/* -------------------- Section 1 About Limovia -------------------- */
+	.aboutLimoviaInfo img {
+		width: 600px !important;
+		height: auto;
+	}
+}
+
 @media screen and (max-width: 769px) {
 	/* -------------------- Section 1 Limovia Number Show-------------------- */
 
@@ -50,11 +68,9 @@
 	}
 
 	.aboutLimoviaInfo img {
-		width: 500px ;
+		width: 500px;
 		height: auto;
 	}
-
-
 
 	/* -------------------- Footer -------------------- */
 	.footerContent {
@@ -81,6 +97,16 @@
 
 @media screen and (max-width: 541px) {
 
+	/* -------------------- Section 1 About Limovia -------------------- */
+	.aboutLimoviaInfo img {
+		width: 370px !important;
+		height: auto;
+	}
+
+	.aboutLimoviaText1 {
+		font-size: 20px !important;
+	}
+
 	/* -------------------- Footer -------------------- */
 	.footerRight ul li {
 		display: block;
@@ -88,4 +114,14 @@
 	}
 }
 
-@media screen and (max-width: 426px) {}
+@media screen and (max-width: 426px) {
+/* -------------------- Section 1 About Limovia -------------------- */
+	.aboutLimoviaInfo img {
+		width: 300px !important;
+		height: auto;
+	}
+
+	.aboutLimoviaText1 {
+		font-size: 18px !important;
+	}
+}
