--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,4 +47,6 @@ img {
     src: url("../FONTS/Montserrat-VariableFont_wght.ttf");
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
+
 /*@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap");*/
