--- a/CSS/mediaQueries.css
+++ b/CSS/mediaQueries.css
@@ -13,6 +13,16 @@
 	.login {
 		display: none;
 	}
+
+	/* -------------------- About Limovia Hero Image -------------------- */
+
+	.aboutLimoviaHeroText {
+		width: 90%;
+	}
+
+	.aboutLimoviaHeroText p {
+		padding: 0px !important;
+	}
 }
 
 @media screen and (max-width: 913px) {
@@ -115,7 +125,8 @@
 }
 
 @media screen and (max-width: 426px) {
-/* -------------------- Section 1 About Limovia -------------------- */
+
+	/* -------------------- Section 1 About Limovia -------------------- */
 	.aboutLimoviaInfo img {
 		width: 300px !important;
 		height: auto;
