--- a/CSS/aboutLimovia.css
+++ b/CSS/aboutLimovia.css
@@ -89,6 +89,7 @@
     position: relative;
     background-color: black;
     color: white;
+    font-family: 'Raleway', sans-serif;
 }
 
 .slides {
@@ -105,7 +106,7 @@
     width: auto;
     margin-top: -30px;
     padding: 16px;
-    color: #888;
+    color: white;
     font-weight: bold;
     font-size: 20px;
     border-radius: 0 3px 3px 0;
