--- a/CSS/aboutLimovia.css
+++ b/CSS/aboutLimovia.css
@@ -86,7 +86,9 @@
 /* -------------------- About Limovia Slideshow -------------------- */
 
 .aboutLimoviaSlideshow {
+    min-height: 50vh;
     position: relative;
+    width: 100%;
     background-color: black;
     color: white;
     font-family: 'Raleway', sans-serif;
@@ -94,8 +96,12 @@
 
 .slides {
     display: none;
-    padding: 80px;
+    padding: 75px;
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .prev,
@@ -105,16 +111,36 @@
     top: 50%;
     width: auto;
     margin-top: -30px;
-    padding: 16px;
+    margin: 0 40px;
+    padding: 20px;
     color: white;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 3px 3px 0;
+    font-weight: 100;
+    font-size: 30px;
     user-select: none;
+    transition: 500ms;
 }
 
 .next {
     position: absolute;
     right: 0;
     border-radius: 3px 0 0 3px;
+}
+
+.slides p {
+    padding: 20px;
+    font-size: larger;
+}
+
+.quoteIcon img {
+    width: 50px;
+    height: auto;
+}
+
+.author {
+    font-style: oblique;
+    color: #E6D8D7;
+}
+
+.prev:hover , .next:hover {
+    color: #F6DBC0;
 }
