--- a/CSS/mediaQueries.css
+++ b/CSS/mediaQueries.css
@@ -23,6 +23,22 @@
 	.aboutLimoviaHeroText p {
 		padding: 0px !important;
 	}
+
+	/* -------------------- About Limovia Slideshow -------------------- */
+	.slides {
+		padding: 0px !important;
+	}
+
+	.slides p {
+		padding: 10px;
+		width: 100%;
+	}
+
+	.prev,
+	.next {
+		top: 40% !important;
+	}
+
 }
 
 @media screen and (max-width: 913px) {
@@ -82,6 +98,17 @@
 		height: auto;
 	}
 
+	/* -------------------- About Limovia Slideshow -------------------- */
+	.prev,
+	.next {
+		margin: 0 !important;
+	}
+
+	.slides {
+		padding: 0px !important;
+		width: 80%;
+	}
+
 	/* -------------------- Footer -------------------- */
 	.footerContent {
 		flex-direction: column;
@@ -115,6 +142,12 @@
 
 	.aboutLimoviaText1 {
 		font-size: 20px !important;
+	}
+
+	/* -------------------- About Limovia Slideshow -------------------- */
+	.prev,
+	.next {
+		display: none;
 	}
 
 	/* -------------------- Footer -------------------- */
