--- a/CSS/aboutLimovia.css
+++ b/CSS/aboutLimovia.css
@@ -95,13 +95,22 @@
 }
 
 .slides {
-    display: none;
+    /*display: none;*/
     padding: 75px;
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    opacity: 1;
+    /* Start with 0 opacity */
+    transition: opacity 1s ease;
+    /* Add a smooth transition effect */
+}
+
+.slides.active {
+    opacity: 3;
+    /* Set the opacity of the active slide to 1 */
 }
 
 .prev,
@@ -141,6 +150,7 @@
     color: #E6D8D7;
 }
 
-.prev:hover , .next:hover {
+.prev:hover,
+.next:hover {
     color: #F6DBC0;
 }
