--- a/CSS/commonQuestions.css
+++ b/CSS/commonQuestions.css
@@ -33,3 +33,58 @@
     font-style: oblique;
     font-family: 'Raleway', sans-serif;
 }
+
+/* -------------------- Questions -------------------- */
+
+.questionSearchBar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.searchBar {
+    display: flex;
+}
+
+.searchBar input[type="text"] {
+    border-top: solid 2px #373B4D;
+    border-left: solid 2px #373B4D;
+    border-bottom: solid 2px #373B4D;
+    border-right: none;
+    font-size: 18px;
+    width: 430px;
+    outline: none;
+    background-color: black;
+    font-style: oblique;
+    color: aliceblue;
+    transition: 500ms;
+}
+
+.searchBar input[type="text"]:focus {
+    border-top: solid 2px white;
+    border-left: solid 2px white;
+    border-bottom: solid 2px white;
+}
+
+.searchBar button {
+    background-color: white;
+    color: black;
+    border: none;
+    cursor: pointer;
+    font-size: larger;
+    width: 70px;
+}
+
+.searchBar input[type="text"],
+.searchBar button {
+    padding: 17px;
+}
+
+.searchBar ::placeholder {
+    color: #373B4D;
+}
+
+.questionContainer {
+    /*background-color: black;*/
+    padding: 50px;
+}
