--- a/CSS/mediaQueries.css
+++ b/CSS/mediaQueries.css
@@ -68,6 +68,19 @@
 		height: 150px !important;
 	}
 
+	/* -------------------- Fleet -------------------- */
+
+	.fleetSlideImage img {
+		width: 902px !important;
+		height: 500px !important;
+		object-fit: cover;
+	}
+
+	.carousel-slide {
+		display: flex;
+		flex-direction: column;
+	}
+
 }
 
 @media screen and (max-width: 913px) {
@@ -153,6 +166,14 @@
 		height: 120px !important;
 	}
 
+	/* -------------------- Fleet -------------------- */
+
+	.fleetSlideImage img {
+		width: 640px !important;
+		height: 500px !important;
+		object-fit: cover;
+	}
+
 	/* -------------------- Footer -------------------- */
 	.footerContent {
 		flex-direction: column;
@@ -226,6 +247,33 @@
 	.questions h2 {
 		height: 115px !important;
 	}
+
+	/* -------------------- Fleet -------------------- */
+
+	.fleetSlideImage img {
+		width: 300px !important;
+		height: 200px !important;
+		object-fit: cover;
+	}
+
+	.carSpecsIcons {
+		grid-template-columns: repeat(4, 65px) !important;
+		grid-gap: 5px !important;
+	}
+
+	.specIcon img {
+		width: 15px !important;
+		height: 15px !important;
+	}
+
+	.specIcon p {
+		font-size: 10px !important;
+		padding-top: 5px;
+	}
+
+		.carInfo h1 {
+			font-size: 35px !important;
+		}
 
 
 	/* -------------------- Footer -------------------- */
