--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -37,6 +37,9 @@
 .contactLeft {
    flex-basis: 60%;
    padding: 40px;
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   grid-gap: 30px;
 }
 
 .contactInputRow {
@@ -148,3 +151,43 @@ input[type=number] {
    font-family: 'Raleway', sans-serif;
    letter-spacing: 1px;
 }
+
+/* -------------------- CEO contact -------------------- */
+
+.profile img {
+   width: 400px;
+   max-width: 100%;
+   height: 270px;
+   border-radius: 3px;
+}
+
+.profile figcaption {
+   padding: 3px 0px;
+}
+
+.profile {
+   padding: 15px;
+   transition: 500ms;
+   box-shadow: 0px 8px 8px -4px rgb(25, 25, 25);
+}
+
+.profile:hover {
+   box-shadow: 0px 4px 8px rgb(45, 45, 45);
+}
+
+.profile .figcaptionOne {
+   color: white;
+   font-size: 25px;
+   color: #E6D8D7;
+   font-weight: lighter;
+   text-align: center;
+}
+
+.profile .figcaptionTwo,
+.profile .figcaptionThree {
+   color: white;
+   text-align: center;
+   font-size: 15px;
+   font-family: 'Raleway', sans-serif;
+}
+
