--- a/CSS/signUp.css
+++ b/CSS/signUp.css
@@ -102,6 +102,10 @@ body {
     border: solid 2px #373B4D;
 }
 
+.signUpInputRow input:focus {
+    border: solid 2px white;
+}
+
 .signUpInputGroup input {
     margin: 5px;
 }
