--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,6 +15,12 @@ html {
     margin: 0;
 }
 
+section {
+    padding-top: 20px;
+    /* Add padding to the section */
+    /* Add other styles as needed */
+}
+
 img {
     user-select: none;
     -moz-user-select: none;
