--- a/CSS/mediaQueries.css
+++ b/CSS/mediaQueries.css
@@ -27,6 +27,11 @@
 		padding: 40px !important;
 	}
 
+	/* -------------------- Sign Up -------------------- */
+
+	.formContainer {
+		box-shadow: none !important;
+	}
 
 	/* -------------------- Section 1 Limovia Number Show-------------------- */
 
@@ -158,6 +163,17 @@
 		display: none;
 	}
 
+	/* -------------------- Sign Up -------------------- */
+
+	body {
+		overflow-y: hidden !important;
+	}
+
+	.signUpPrivateContainer,
+	.signUpCompanyContainer {
+		padding: 0px;
+	}
+
 	/* -------------------- Section 1 Limovia Number Show-------------------- */
 
 	.section1 .numberShowContainer {
@@ -275,6 +291,51 @@
 }
 
 @media screen and (max-width: 541px) {
+
+	/* -------------------- Sign Up -------------------- */
+
+	.formContainer {
+		width: 100%;
+		/* Adjust width for smaller screens */
+	}
+
+	.selectWheelRegion select {
+		appearance: none;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		background-color: #fff;
+		border: 1px solid #ccc;
+		padding: 13px;
+		font-size: 16px;
+		cursor: pointer;
+		font-family: 'Raleway', sans-serif;
+		outline: none;
+		width: 245px;
+	}
+
+	.selectWheelRegion::before {
+		content: '\25BC';
+		width: 25px;
+	}
+
+	.selectWheelTitle::before {
+		content: '\25BC';
+		width: 20px;
+	}
+
+	.selectWheelRegion select,
+	.selectWheelTitle select {
+		width: 100%;
+	}
+
+	.accountChangeButtons {
+		align-items: center;
+		justify-content: center;
+	}
+
+	.accountChangeButtons button {
+		width: 40%;
+	}
 
 	/* -------------------- Section 1 About Limovia -------------------- */
 	.aboutLimoviaInfo img {
@@ -398,6 +459,40 @@
 	.signUp {
 		flex-wrap: wrap;
 	}
+
+	/* -------------------- Sign Up -------------------- */
+
+	body {
+		display: block;
+		overflow-y: scroll !important;
+	}
+
+	.formContainer {
+		width: 100%;
+	}
+
+	.signUpInputGroup {
+		flex-direction: column;
+	}
+
+	.signUpInputRow {
+		padding: 10px;
+	}
+
+	.selectWheelTitle,
+	.selectWheelRegion {
+		margin: 0px;
+	}
+
+	.accountChangeButtons {
+		align-items: center;
+		justify-content: center;
+	}
+
+	.accountChangeButtons button {
+		width: 40%;
+	}
+
 
 	/* -------------------- Section 1 About Limovia -------------------- */
 	.aboutLimoviaInfo img {
