--- a/CSS/service.css
+++ b/CSS/service.css
@@ -17,3 +17,58 @@
     height: 100%;
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5));
 }
+
+.serviceInfo {
+    display: grid;
+    grid-template-columns: 20% 60% 20%;
+    background-color: black;
+    color: white;
+}
+
+.serviceInfoContainer {
+    padding: 50px 0px;
+}
+
+.serviceHR {
+    border: solid 1px white;
+    border-radius: 5px;
+    width: 100%;
+    margin: 20px 0px;
+}
+
+.serviceInfoContent h1 {
+    font-weight: lighter;
+    font-size: 1.8em;
+    color: #E6D8D7;
+    padding-bottom: 10px;
+}
+
+.serviceInfoContent p {
+    line-height: 25px;
+    font-family: 'Raleway', sans-serif;
+    padding-bottom: 15px;
+}
+
+.serviceInfoContent ul li {
+    list-style: none;
+}
+
+.serviceInfoContent a {
+    color: white;
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    font-family: 'Raleway', sans-serif;
+    padding: 10px 50px;
+    border: 2px solid white;
+    transition: 500ms;
+}
+
+.serviceInfoContent a:hover {
+    color: white;
+    background-color: transparent;
+}
+
+.serviceInfoContent .addressRow p {
+    padding-bottom: 0px;
+}
