--- a/CSS/mediaQueries.css
+++ b/CSS/mediaQueries.css
@@ -33,6 +33,13 @@
 		box-shadow: none !important;
 	}
 
+	/* -------------------- Service -------------------- */
+
+	.serviceInfo {
+		display: grid;
+		grid-template-columns: 5% 90% 5% !important;
+	}
+
 	/* -------------------- Section 1 Limovia Number Show-------------------- */
 
 	.navigationLinks,
@@ -297,6 +304,13 @@
 	.formContainer {
 		width: 100%;
 		/* Adjust width for smaller screens */
+	}
+
+	/* -------------------- Service -------------------- */
+
+	.serviceSlideshowMain {
+		display: grid;
+		grid-template-columns: repeat(1, 1fr) !important;
 	}
 
 	.selectWheelRegion select {
