--- a/CSS/service.css
+++ b/CSS/service.css
@@ -1,11 +1,10 @@
 .serviceHeroImage {
     min-height: 60vh;
     width: 100%;
-    background-position: top;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    object-fit: cover;
 }
 
 .serviceHeroImage::before {
@@ -15,7 +14,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5));
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5));
 }
 
 .serviceInfo {
